common-applications/control/cla/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: cla-backend
  name: cla-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      component: cla-backend
  template:
    metadata:
      labels:
        component: cla-backend
    spec:
      containers:
        - image: swr.ap-southeast-1.myhuaweicloud.com/opensourceway/cla-webui:aebbf8682914e3ad42abd850eab675ecfa8b0159
          imagePullPolicy: IfNotPresent
          name: cla-backend-pod
          ports:
            - containerPort: 80
              name: http
              protocol: TCP
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    component: cla-frontend
  name: cla-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      component: cla-frontend
  template:
    metadata:
      labels:
        component: cla-frontend
    spec:
      containers:
        - image: swr.ap-southeast-1.myhuaweicloud.com/opensourceway/cla-webui:aebbf8682914e3ad42abd850eab675ecfa8b0159
          imagePullPolicy: IfNotPresent
          name: cla-frontend-pod
          ports:
            - containerPort: 80
              name: http
              protocol: TCP
