common-applications/control/cla/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-issuer
  name: cla-ingress
spec:
  tls:
    - hosts:
        - test-cla.osinfra.cn
      secretName: cla-tls
  rules:
    - host: test-cla.osinfra.cn
      http:
        paths:
          - backend:
              serviceName: claservice
              servicePort: 80
            path: /
